<resources>
    <string name="app_name">CarmeloAdmin</string>

    <string name="title_activity_inicio">InicioActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ver_mas">Ver Mas</string>
    <string name="cantidad">Cantidad</string>
    <string name="grueso">Grueso</string>
    <string name="alto">Alto</string>
    <string name="nombrePuerta">Ancho</string>
    <string name="generar_despiece">Generar Despiece</string>
    <string name="bienvenida_app">Bienvenido A CarmeloAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">CarmeloAdmin</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="requerido">El campo es requerido</string>
    <string name="existe_nombre_persona">El nombre de la persona es requerido</string>
    <string name="existe_apellido_persona">El apellido de la persona es requerido</string>
    <string name="existe_persona">La persona ya existe</string>
    <string name="consultar">Consultar</string>
    <string name="ingresar_identificador">Por favor ingresar un Identificador</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="persona_actualizada">Los datos de la persona se actualizaron exitosamente</string>
    <string name="persona_no_actualizada">Los datos de la persona no se actualizaron</string>
    <string name="eliminar">Eliminar</string>
    <string name="persona_eliminada">La persona ha sido eliminada Exitosamente</string>
    <string name="gestion_personas">Gestión del personal</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="crear_cuenta">Deseo crear una nueva cuenta de usuario</string>
    <string name="datos_no_encontrados">El usuario y/o contraseña ingresados es incorrecto</string>
    <string name="Id">Identificación</string>
    <string name="usuario_registrado">El usuario se registró exitosamente</string>
    <string name="id_requerido">El numero de Identificacion es un campo requerido</string>
    <string name="nombre_usuario_requerido">El nombre de usuario es un campo requerido</string>
    <string name="contrasenia_requerida">La contraseña es un campo requerido</string>
    <string name="existe_usuario">El Usuario ya existe en el sistema</string>
    <string name="buscar">Buscar</string>
    <string name="existe_usuario_con_id">El usuario con la idenficación ingresada ya existe, asegúrece de registrarse con una identificación diferente</string>
    <string name="existe_nombre_usuario">El nombre de usuario ya existe en el sistema, asegúrese de ingresar un nombre de usuario diferente</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lista_de_puertas_vacia">No existen puertas registradas actualmente</string>
    <string name="title_activity_presentacion">PresentacionActivity</string>
    <string name="tamanio_constrasenia">La contraseña debe tener al menos 8 caracteres</string>
    <string name="caracteres_contrasenia">La contraseña debe tener por lo menos una letra</string>
    <string name="diligenciar_todos_campos">Se deben diligenciar todos los campos</string>
    <string name="error_imagen_galeria">Error obteniendo imagen de la galería por -> </string>
    <string name="id_menor_8_caracteres">El identificador único de puerta debe ser menor a 8 caracteres</string>
    <string name="seleccione_imagen">Debe Seleccionar una imagen</string>
    <string name="generacion_despiece">Generación del Despiece</string>
    <string name="minimo_alto">Recuerde que el mínimo valor para la fabricación de una puerta son 20cm de Alto</string>
    <string name="minimo_ancho">Recuerde que el mínimo valor para la fabricación de una puerta son 25cm de Ancho</string>
    <string name="minima_cantidad">Recuerde que el mínimo valor de cantidad de puertas es 1</string>
    <string name="local">local</string>
    <string name="permisos_off">Permisos Desactivados</string>
    <string name="aceptar_permisos">Debe aceptar los permisos para el correcto funcionamiento de la App</string>
    <string name="registro_ok">El registro de la puerta fue satisfactorio</string>
    <string name="seleccione_app">Seleccione la Aplicacion</string>
    <string name="registrar_nuevo_diseño">Registrar Nuevo Diseño</string>
    <string name="carmelo_admin">Carmelo Admin</string>
    <string name="registrar">Registrar</string>
    <string name="despiece">Despiece:</string>
    <string name="generar_despiece_d">GENERAR DESPIECE</string>
    <string name="ancho">ANCHO</string>
    <string name="alto_o">ALTO</string>
    <string name="cantidades">CANTIDAD</string>
    <string name="ingresar">INGRESAR</string>
    <string name="ingrese_la_referencia">Ingrese la referencia</string>
    <string name="ingrese_un_identificador_nico">Ingrese un Identificador único</string>
    <string name="registrar_nueva_puerta">REGISTRAR NUEVA PUERTA</string>
    <string name="seleccionar_imagen">SELECCIONAR IMAGEN</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="gestion_de_parametros">Gestion de Parametros</string>
    <string name="agregar_puerta">Agregar Puerta</string>
    <string name="piezas_en_el_stock">Piezas en el Stock</string>
    <string name="configuraciones">Configuraciones</string>
</resources>
