<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/gestion_parametros"
            android:icon="@drawable/ic_add"
            android:title="@string/gestion_de_parametros" />
        <item
            android:id="@+id/agregar_puerta"
            android:icon="@drawable/ic_add2"
            android:title="@string/agregar_puerta" />
        <item
            android:id="@+id/agregar_pieza"
            android:icon="@drawable/ic_add"
            android:title="@string/piezas_en_el_stock" />
        <item
            android:id="@+id/configuraciones"
            android:icon="@drawable/ic_conf"
            android:title="@string/configuraciones" />
    </group>
</menu>
